[Team][dev] saisie (BO & MSservice)

--- a/gambist-bo/config/config.json
+++ b/gambist-bo/config/config.json
@@ -2,6 +2,12 @@
     "BASE_URL": "http://localhost:8080/",
     "Team": {
         "FindById": "team/by-id",
-        "FindAll": "team/all"
+        "FindAll": "team/all",
+        "Add": "team/add"
+    },
+    "Category": {
+        "FindById": "category/by-id",
+        "FindAll": "category/all",
+        "Add": "category/add"
     }
 }
