--- a/gambist-bo/config/config.json
+++ b/gambist-bo/config/config.json
@@ -3,11 +3,15 @@
     "Team": {
         "FindById": "team/by-id",
         "FindAll": "team/all",
-        "Add": "team/add"
+        "Add": "team/add",
+        "Edit": "team/edit",
+        "Delete": "team/delete"
     },
     "Category": {
         "FindById": "category/by-id",
         "FindAll": "category/all",
-        "Add": "category/add"
+        "Add": "category/add",
+        "Edit": "category/edit",
+        "Delete": "category/delete"
     }
 }
