[Match][dev] Liste et saisie de match

--- a/gambist-bo/config/config.json
+++ b/gambist-bo/config/config.json
@@ -13,5 +13,12 @@
         "Add": "category/add",
         "Edit": "category/edit",
         "Delete": "category/delete"
+    },
+    "Match": {
+        "FindById": "match/by-id",
+        "FindAll": "match/all",
+        "Add": "match/add",
+        "Edit": "match/edit",
+        "Delete": "match/delete"
     }
 }
