[BetType][dev] create bet type page & services

--- a/gambist-bo/config/config.json
+++ b/gambist-bo/config/config.json
@@ -20,5 +20,12 @@
         "Add": "match/add",
         "Edit": "match/edit",
         "Delete": "match/delete"
+    },
+    "BetType": {
+        "FindById": "betType/by-id",
+        "FindAll": "betType/all",
+        "Add": "betType/add",
+        "Edit": "betType/edit",
+        "Delete": "betType/delete"
     }
 }
