--- a/gambistWinForm/gambistWinForm.csproj
+++ b/gambistWinForm/gambistWinForm.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ConfigurationServices.cs" />
+    <Compile Include="Services\MatchServices.cs" />
     <Compile Include="Utils\Converters.cs" />
     <EmbeddedResource Include="Accueil.resx">
       <DependentUpon>Accueil.cs</DependentUpon>
