--- a/gambistGrailsApi/grails-app/conf/application.yml
+++ b/gambistGrailsApi/grails-app/conf/application.yml
@@ -105,8 +105,8 @@ dataSource:
     driverClassName: org.h2.Driver
     username: sa
     password: ''
-    logSql: true
-    formatSql: true
+#    logSql: true
+#    formatSql: true
 
 environments:
     development:
