--- a/gambistWinForm/gambistWinForm.csproj
+++ b/gambistWinForm/gambistWinForm.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ConfigurationServices.cs" />
     <Compile Include="Services\MatchServices.cs" />
+    <Compile Include="Services\PariServices.cs" />
     <Compile Include="Utils\Converters.cs" />
     <EmbeddedResource Include="Accueil.resx">
       <DependentUpon>Accueil.cs</DependentUpon>
