--- a/gambist-fo/config/config.json
+++ b/gambist-fo/config/config.json
@@ -1,44 +1,45 @@
 {
     "BASE_URL": "http://localhost:8080/",
     "Team": {
-        "FindById": "team/by-id",
+        "FindById": "team/get",
         "FindAll": "team/all",
         "Add": "team/add",
         "Edit": "team/edit",
         "Delete": "team/delete"
     },
     "Category": {
-        "FindById": "category/by-id",
+        "FindById": "category/get",
         "FindAll": "category/all",
         "Add": "category/add",
         "Edit": "category/edit",
         "Delete": "category/delete"
     },
     "Match": {
-        "FindById": "match/by-id",
+        "FindById": "match/get",
         "FindAll": "match/all",
         "Add": "match/add",
         "Edit": "match/edit",
         "Delete": "match/delete",
         "UpcomingMatch": "match/upcoming-match",
-        "UpcomingMatchGroupedByCategory": "match/upcoming-match/grouped-by-cartegory"
+        "UpcomingMatchGroupedByCategory": "match/upcoming-match/grouped-by-cartegory",
+        "GetAllMatchId": "match/getAllMatchId"
     },
     "BetType": {
-        "FindById": "betType/by-id",
+        "FindById": "betType/get",
         "FindAll": "betType/all",
         "Add": "betType/add",
         "Edit": "betType/edit",
         "Delete": "betType/delete"
     },
     "Bet": {
-        "FindById": "bet/by-id",
+        "FindById": "bet/get",
         "FindAll": "bet/all",
         "Add": "bet/add",
         "Edit": "bet/edit",
         "Delete": "bet/delete"
     },
     "User": {
-        "FindById": "user/by-id",
+        "FindById": "user/get",
         "FindAll": "user/all",
         "Add": "user/add",
         "Edit": "user/edit",
