--- a/gambistGrailsApi/build.gradle
+++ b/gambistGrailsApi/build.gradle
@@ -53,7 +53,7 @@ dependencies {
     compile "org.grails.plugins:events"
     compile "org.grails.plugins:hibernate5"
     compile "org.hibernate:hibernate-core:5.4.18.Final"
-    compile "org.grails.plugins:gsp"s
+    compile "org.grails.plugins:gsp"
     compileOnly "io.micronaut:micronaut-inject-groovy"
     console "org.grails:grails-console"
     profile "org.grails.profiles:web"
