[BO][Match][dev] create match ending form

--- a/gambist-bo/config/config.json
+++ b/gambist-bo/config/config.json
@@ -19,7 +19,8 @@
         "FindAll": "match/all",
         "Add": "match/add",
         "Edit": "match/edit",
-        "Delete": "match/delete"
+        "Delete": "match/delete",
+        "UpdateScore": "match/updateScore"
     },
     "BetType": {
         "FindById": "betType/by-id",
