--- a/gambistFoMob/src/config/config.json
+++ b/gambistFoMob/src/config/config.json
@@ -1,5 +1,5 @@
 {
-    "BASE_URL": "http://localhost:8080/",
+    "BASE_URL": "http://192.168.66.233:8080/",
     "Team": {
         "FindById": "team/get",
         "FindAll": "team/all",
@@ -34,6 +34,7 @@
     "Bet": {
         "FindById": "bet/get",
         "FindAll": "bet/all",
+        "FindByUser": "bet/findByUser",
         "Add": "bet/add",
         "Edit": "bet/edit",
         "Delete": "bet/delete"
@@ -44,5 +45,9 @@
         "Add": "user/add",
         "Edit": "user/edit",
         "Delete": "user/delete"
+    },
+    "Authentification": {
+        "Login": "authentification/login",
+        "Registration": "authentification/registration"
     }
 }
