--- a/gambist-fo/config/config.json
+++ b/gambist-fo/config/config.json
@@ -22,7 +22,8 @@
         "Delete": "match/delete",
         "UpcomingMatch": "match/upcoming-match",
         "UpcomingMatchGroupedByCategory": "match/upcoming-match/grouped-by-cartegory",
-        "GetAllMatchId": "match/getAllMatchId"
+        "GetAllMatchId": "match/getAllMatchId",
+        "GetLatestMatchResult": "match/getLatestMatchResult"
     },
     "BetType": {
         "FindById": "betType/get",
